--- a/hawkeye/package.json
+++ b/hawkeye/package.json
@@ -18,7 +18,7 @@
     "analyze:watch": "bun run --watch scripts/analyse-heimdall.ts"
   },
   "dependencies": {
-    "@ai-sdk/google": "^1.0.0",
+    "@ai-sdk/google": "^2.0.14",
     "@auth/drizzle-adapter": "^1.0.0",
     "@aws-sdk/client-cloudwatch": "^3.0.0",
     "@aws-sdk/client-ec2": "^3.0.0",
@@ -30,7 +30,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.6",
-    "ai": "^5.0.0",
+    "ai": "^5.0.44",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.44.5",
@@ -40,7 +40,8 @@
     "postgres": "^3.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "typescript": "^5",
