--- a/hawkeye/package.json
+++ b/hawkeye/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "ai": "^5.0.44",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -40,6 +41,7 @@
     "postgres": "^3.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.2.0",
     "tailwind-merge": "^2.0.0",
     "zod": "^4.1.8"
   },
