--- a/hawkeye/package.json
+++ b/hawkeye/package.json
@@ -26,6 +26,7 @@
     "@aws-sdk/client-s3": "^3.0.0",
     "@aws-sdk/client-sts": "^3.0.0",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
