--- a/hawkeye/package.json
+++ b/hawkeye/package.json
@@ -29,7 +29,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "ai": "^5.0.44",
@@ -37,8 +37,10 @@
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.44.5",
     "lucide-react": "^0.400.0",
+    "motion": "^12.23.12",
     "next": "15.5.3",
     "next-auth": "^5.0.0-beta.29",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
